commit translated contents

--- a/docs/visual-basic/misc/bc30044.md
+++ b/docs/visual-basic/misc/bc30044.md
@@ -1,5 +1,5 @@
 ---
-title: "'<keyword>' non è valido all'interno di una struttura"
+title: "' <keyword> ' non è valido all'interno di una struttura"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30044
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30044
 ms.assetid: 252510cf-e084-47e4-9592-4aa8f94fabe4
-ms.openlocfilehash: c99424a95fda2cc8ce7d20b8c9736403570b7ed7
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 8b9fc352e3535c926ecf0186cba5189ea55d050d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69658763"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381472"
 ---
-# <a name="keyword-is-not-valid-within-a-structure"></a>'\<keyword >' non è valido all'interno di una struttura
+# <a name="keyword-is-not-valid-within-a-structure"></a>' \<keyword> ' non è valido all'interno di una struttura
 Le strutture sono tipi valore, non tipi riferimento. Una struttura non è un'istanza creata da una classe, quindi le parole chiave `Me`, `MyClass`e `MyBase` sono prive di significato in una struttura.  
   
  **ID errore:** BC30044  
@@ -25,7 +25,7 @@ Le strutture sono tipi valore, non tipi riferimento. Una struttura non è un'ist
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Me](../programming-guide/program-structure/me-my-mybase-and-myclass.md#me)
+- [Me stesso](../programming-guide/program-structure/me-my-mybase-and-myclass.md#me)
 - [MyClass](../programming-guide/program-structure/me-my-mybase-and-myclass.md#myclass)
 - [MyBase](../programming-guide/program-structure/me-my-mybase-and-myclass.md#mybase)
-- [Nozioni fondamentali sull'ereditarietà](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [Nozioni fondamentali sull'ereditarietà](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
