--- a/docs/visual-basic/misc/bc30578.md
+++ b/docs/visual-basic/misc/bc30578.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30578
 ms.assetid: f011673d-eced-46a7-a08e-d54d86c8a76b
-ms.openlocfilehash: 9932f34b85ed70920e0a6741a1f7283ae6d52330
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 7b7d72de59289abb48df168da113e50347b32c93
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69664940"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412767"
 ---
 # <a name="end-externalsource-must-be-preceded-by-a-matching-externalsource"></a>'#End ExternalSource' deve essere preceduto da un oggetto '#ExternalSource' corrispondente
 La direttiva `#ExternalSource` fa riferimento al codice esterno, permettendo al compilatore di segnalare con precisione le eccezioni che si verificano all'interno di tale codice. Un blocco `#ExternalSource` deve iniziare con `#ExternalSource` e terminare con `#End ExternalSource`.  
@@ -27,5 +27,5 @@ La direttiva `#ExternalSource` fa riferimento al codice esterno, permettendo al 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Direttiva #ExternalSource](../../visual-basic/language-reference/directives/externalsource-directive.md)
+- [#ExternalSource (direttiva)](../language-reference/directives/externalsource-directive.md)
 - [Compilazione condizionale in Visual Basic](../programming-guide/program-structure/conditional-compilation.md)
