--- a/docs/visual-basic/misc/bc30759.md
+++ b/docs/visual-basic/misc/bc30759.md
@@ -1,5 +1,5 @@
 ---
-title: Fa riferimento '<membername>' ha il valore 'Nothing'
+title: L'oggetto <membername> a cui si fa riferimento ha valore 'Nothing'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30759
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30759
 ms.assetid: 37f359d4-4373-4e1a-a834-789e4dbb2865
-ms.openlocfilehash: 7ab0affaf597fa6bcdcaad336ee09da94d28c491
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c99761880def9765db92f9efcda374dbf0d6b9a0
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657019"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361567"
 ---
-# <a name="referenced-membername-has-a-value-of-nothing"></a>Fa riferimento '\<nomeMembro >' ha il valore 'Nothing'
+# <a name="referenced-membername-has-a-value-of-nothing"></a>L'oggetto \<membername> a cui si fa riferimento ha valore 'Nothing'
 All'elemento a cui si fa riferimento è stato assegnato il valore `Nothing`o non è stato assegnato alcun valore.  
   
  **ID errore:** BC30759  
@@ -25,4 +25,4 @@ All'elemento a cui si fa riferimento è stato assegnato il valore `Nothing`o non
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Nothing](../../visual-basic/language-reference/nothing.md)
+- [Nothing](../language-reference/nothing.md)
