--- a/docs/visual-basic/misc/bc31135.md
+++ b/docs/visual-basic/misc/bc31135.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31135
 ms.assetid: 2eaf5a6f-d201-4f9b-bcdf-12170cb44791
-ms.openlocfilehash: 7be7a1a28ee20e127709e5dec82775a2625abc64
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 3181ae95833efdc2bdabb9d6ee7e1ff68beebb83
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69666954"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414699"
 ---
 # <a name="specifiers-are-not-valid-on-addhandler-removehandler-and-raiseevent-methods"></a>Gli identificatori non sono validi nei metodi 'AddHandler', 'RemoveHandler' e 'RaiseEvent'
 Non è possibile modificare le dichiarazioni dei metodi `AddHandler`, `RemoveHandler`e `RaiseEvent` con parole chiave come `Public` o `ReadOnly`. Solo le dichiarazioni modificabili possono contenere queste parole chiave.  
@@ -25,9 +25,9 @@ Non è possibile modificare le dichiarazioni dei metodi `AddHandler`, `RemoveHan
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Event](../../visual-basic/language-reference/statements/event-statement.md)
+- [Istruzione Event](../language-reference/statements/event-statement.md)
 - [Istruzione AddHandler](../language-reference/statements/addhandler-statement.md)
 - [RemoveHandler (istruzione)](../language-reference/statements/removehandler-statement.md)
 - [RaiseEvent-istruzione](../language-reference/statements/raiseevent-statement.md)
 - [Parole chiave (Visual Basic)](../language-reference/keywords/index.md)
-- [Eventi](../../visual-basic/programming-guide/language-features/events/index.md)
+- [Events](../programming-guide/language-features/events/index.md)
