--- a/docs/visual-basic/misc/bc31186.md
+++ b/docs/visual-basic/misc/bc31186.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31186
 ms.assetid: 14436245-1b2e-4ca9-a139-bd1d79ed9d72
-ms.openlocfilehash: 86bd33e4bc49f56366bede213721abbdcae5a51e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 577891c5c300fce5090dcd2451a22ed709e9cf48
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64665471"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405391"
 ---
 # <a name="-is-not-allowed"></a>Il segno ':' non è consentito
 Il segno ':' non è consentito. Non è possibile usare nomi completi XML in questo contesto.  
@@ -29,5 +29,5 @@ Il segno ':' non è consentito. Non è possibile usare nomi completi XML in ques
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Valori letterali XML](../../visual-basic/language-reference/xml-literals/index.md)
-- [XML](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [Valori letterali XML](../language-reference/xml-literals/index.md)
+- [XML](../programming-guide/language-features/xml/index.md)
