--- a/docs/visual-basic/misc/bc32084.md
+++ b/docs/visual-basic/misc/bc32084.md
@@ -1,5 +1,5 @@
 ---
-title: Il parametro di<typeparametername1>tipo '' deve contenere un vincolo ' New ' o ' Structure ' per soddisfare il vincolo ' New ' per il parametro di tipo<typeparametername2>''
+title: Il parametro di tipo ' <typeparametername1> ' deve contenere un vincolo ' New ' o ' Structure ' per soddisfare il vincolo ' New ' per il parametro di tipo ' <typeparametername2> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32084
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32084
 ms.assetid: a7ff58d3-8c67-40e4-9fd8-92cc00524c22
-ms.openlocfilehash: 89af1e27410abeb9e8afddf61b60bc52998a265f
-ms.sourcegitcommit: 463f3f050cecc0b6403e67f19a61f870fb8e7b7d
+ms.openlocfilehash: dff94ca7f0da2d7076729885d8a1615069876d95
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/26/2019
-ms.locfileid: "68512925"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358841"
 ---
-# <a name="type-parameter-typeparametername1-must-have-either-a-new-constraint-or-a-structure-constraint-to-satisfy-the-new-constraint-for-type-parameter-typeparametername2"></a>Il parametro di\<tipo ' nomeparametrotipo1 >' deve contenere un vincolo ' New ' o ' Structure ' per soddisfare il vincolo ' New ' per il parametro di tipo\<' nomeparametrotipo2 >'
+# <a name="type-parameter-typeparametername1-must-have-either-a-new-constraint-or-a-structure-constraint-to-satisfy-the-new-constraint-for-type-parameter-typeparametername2"></a>Il parametro di tipo ' \<typeparametername1> ' deve contenere un vincolo ' New ' o ' Structure ' per soddisfare il vincolo ' New ' per il parametro di tipo ' \<typeparametername2> '
 
 Un'istruzione crea un tipo generico che passa un parametro di tipo che non è vincolato per soddisfare un vincolo `New` .
 
@@ -46,8 +46,8 @@ Quando la classe `c2` crea un oggetto in base a `c1`, il parametro di tipo `u` n
 
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Operatore New](../../visual-basic/language-reference/operators/new-operator.md)
-- [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md)
-- [Classe (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md)
-- [Value Types and Reference Types](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Operatore New](../language-reference/operators/new-operator.md)
+- [Structure (Visual Basic)](../language-reference/statements/structure-statement.md)
+- [Class (Visual Basic)](../language-reference/statements/class-statement.md)
+- [Value Types and Reference Types](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
