--- a/docs/visual-basic/misc/bc36547.md
+++ b/docs/visual-basic/misc/bc36547.md
@@ -1,5 +1,5 @@
 ---
-title: Proprietà o il membro di tipo anonimo '<propertyname>' è già dichiarato
+title: Proprietà o membro di tipo anonimo '<propertyname>' già dichiarato
 ms.date: 07/20/2015
 f1_keywords:
 - bc36547
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36547
 ms.assetid: 4c60d24a-62d7-404a-bc35-d1a1d9c9f851
-ms.openlocfilehash: 0f1d0ce6ae4f3d6718f214805f63cdb7ff7a873d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 0c3a3a36ce12a6003531a6c9632b30eb1e2fba43
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64666288"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378770"
 ---
-# <a name="anonymous-type-member-or-property-propertyname-is-already-declared"></a>Proprietà o il membro di tipo anonimo '\<NomeProprietà >' è già dichiarato
+# <a name="anonymous-type-member-or-property-propertyname-is-already-declared"></a>Proprietà o membro di tipo anonimo '\<propertyname>' già dichiarato
 Un nome di proprietà può essere definito una sola volta nella dichiarazione di un tipo anonimo. Ad esempio, le dichiarazioni seguenti non sono valide:  
   
 ```vb  
@@ -45,5 +45,5 @@ Dim anonType4 = New With {Key .ProductName = product.Name, Key .CarName = car1.N
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tipi anonimi](../../visual-basic/programming-guide/language-features/objects-and-classes/anonymous-types.md)
-- [Procedura: Dedurre i nomi delle proprietà e i tipi nelle dichiarazioni di tipo anonimo](../../visual-basic/programming-guide/language-features/objects-and-classes/how-to-infer-property-names-and-types-in-anonymous-type-declarations.md)
+- [Tipi anonimi](../programming-guide/language-features/objects-and-classes/anonymous-types.md)
+- [Procedura: dedurre tipi e nomi di proprietà nelle dichiarazioni di tipo anonimo](../programming-guide/language-features/objects-and-classes/how-to-infer-property-names-and-types-in-anonymous-type-declarations.md)
