--- a/docs/visual-basic/misc/bc36650-bc36653.md
+++ b/docs/visual-basic/misc/bc36650-bc36653.md
@@ -10,12 +10,12 @@ helpviewer_keywords:
 - BC36650
 - BC36653
 ms.assetid: 79287e1f-7070-4a71-96d2-aee0a0c9d8bd
-ms.openlocfilehash: 62a0a5459c7b61a363287840226b5a2fea5cd3fd
-ms.sourcegitcommit: 68653db98c5ea7744fd438710248935f70020dfb
+ms.openlocfilehash: 7f8482c46d2d1e139da1fe923113d5260ac605b4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/22/2019
-ms.locfileid: "69962795"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84398669"
 ---
 # <a name="data-types-of-the-type-parameters-cannot-be-inferred-from-these-arguments-because-more-than-one-type-is-possible"></a>Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di tipo perché sono possibili più tipi.
 Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di tipo perché sono possibili più tipi. Per correggere l'errore, provare a specificare i tipi di dati in modo esplicito.  
@@ -25,11 +25,11 @@ Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di tip
 > [!NOTE]
 > Quando non è possibile specificare gli argomenti (ad esempio per gli operatori di query nelle espressioni di query), il messaggio di errore visualizzato non contiene la seconda frase.  
   
- Per ulteriori informazioni ed esempi, vedere i [tipi di dati dei parametri di tipo nel metodo '\<methodName >' non possono essere dedotti da questi argomenti perché è possibile specificare più di un tipo](../../visual-basic/misc/bc36651-bc36654.md).  
+ Per ulteriori informazioni ed esempi, vedere i [tipi di dati dei parametri di tipo nel metodo ' \<methodname> ' non possono essere dedotti da questi argomenti perché è possibile specificare più di un tipo](bc36651-bc36654.md).  
   
  **ID errore:** BC36653 e BC36650  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
-- [Risoluzione dell'overload](../../visual-basic/programming-guide/language-features/procedures/overload-resolution.md)
+- [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md)
+- [Risoluzione dell'overload](../programming-guide/language-features/procedures/overload-resolution.md)
