--- a/docs/visual-basic/misc/bc40051.md
+++ b/docs/visual-basic/misc/bc40051.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC40051
 ms.assetid: 623d5e48-7fb2-48a9-bbbb-92914b08c01c
-ms.openlocfilehash: 8a4d699c610781b5394217877c68dc61a1d56c2d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 0640c2fd8d9b83e1ba73370619baeea3f6399041
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64632276"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84395779"
 ---
 # <a name="systemdiagnosticsdebuggerhiddenattribute-does-not-affect-get-or-set-when-applied-to-the-property-definition"></a>System.Diagnostics.DebuggerHiddenAttribute non influisce su 'Get' o 'Set' quando viene applicato alla definizione della proprietà
 System.Diagnostics.DebuggerHiddenAttribute non influisce su 'Get' o 'Set' quando viene applicato alla definizione della proprietà. Applicare l'attributo direttamente alle routine 'Get' e 'Set' come necessario.  
@@ -34,7 +34,7 @@ System.Diagnostics.DebuggerHiddenAttribute non influisce su 'Get' o 'Set' quando
 ## <a name="see-also"></a>Vedere anche
 
 - <xref:System.Diagnostics.DebuggerHiddenAttribute>
-- [Routine Property](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
-- [Istruzione Property](../../visual-basic/language-reference/statements/property-statement.md)
-- [Istruzione Get](../../visual-basic/language-reference/statements/get-statement.md)
-- [Istruzione Set](../../visual-basic/language-reference/statements/set-statement.md)
+- [Routine Property](../programming-guide/language-features/procedures/property-procedures.md)
+- [Property Statement](../language-reference/statements/property-statement.md)
+- [Istruzione Get](../language-reference/statements/get-statement.md)
+- [Istruzione set](../language-reference/statements/set-statement.md)
