--- a/docs/visual-basic/misc/bc42313.md
+++ b/docs/visual-basic/misc/bc42313.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC42313
 ms.assetid: 43dca605-187e-4b0b-b29f-5cc4dcdc5f9f
-ms.openlocfilehash: c3db07f4bdf21396b932b93b9ca19a5373881342
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: e93b90b21d3a5f0cb1d85ff0172bd3754b5ca9cd
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64604307"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84394908"
 ---
 # <a name="xml-comment-tag-returns-is-not-permitted-on-a-writeonly-property"></a>Il tag 'returns' del commento XML non è consentito in una proprietà 'WriteOnly'
 Il tag 'returns' del commento XML non è consentito in una proprietà 'WriteOnly'. Il commento XML verrà ignorato.  
   
- Un commento XML per una dichiarazione di proprietà di sola scrittura non può contenere un \<restituisce > tag.  
+ Un commento XML per una dichiarazione di proprietà di sola scrittura non può contenere un \<returns> tag.  
   
  **ID errore:** BC42313  
   
 ## <a name="to-correct-this-error"></a>Per correggere l'errore  
   
-- Rimuovere il non supportati \<restituisce > tag.  
+- Rimuovere il tag non supportato \<returns> .  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [\<returns>](../../visual-basic/language-reference/xmldoc/returns.md)
-- [Tag di commento XML](../../visual-basic/language-reference/xmldoc/index.md)
-- [Documentazione del codice tramite XML](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
-- [Istruzione Property](../../visual-basic/language-reference/statements/property-statement.md)
+- [\<returns>](../language-reference/xmldoc/returns.md)
+- [Tag di commento XML](../language-reference/xmldoc/index.md)
+- [Documentazione del codice tramite XML](../programming-guide/program-structure/documenting-your-code-with-xml.md)
+- [Property Statement](../language-reference/statements/property-statement.md)
