--- a/docs/visual-basic/misc/bc42314.md
+++ b/docs/visual-basic/misc/bc42314.md
@@ -1,5 +1,5 @@
 ---
-title: Il commento XML non può essere applicato più volte in un elemento parziale <type>
+title: Non è possibile applicare il commento XML più di una volta in un elemento  parziale<type>
 ms.date: 07/20/2015
 f1_keywords:
 - bc42314
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC42314
 ms.assetid: 23c76238-843a-44fe-88b7-25e604ee924b
-ms.openlocfilehash: 1618681c16299a8e6422fa94a1ce10a572763c47
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c3e23bb55efdb921361cd8a81df1d6ac25dfa023
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663035"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84394843"
 ---
-# <a name="xml-comment-cannot-be-applied-more-than-once-on-a-partial-type"></a>Il commento XML non può essere applicato più volte in un elemento parziale \<tipo >
-Il commento XML non può essere applicato più volte in un elemento parziale \<tipo >. Commenti in formato XML per questo \<tipo > verranno ignorati.  
+# <a name="xml-comment-cannot-be-applied-more-than-once-on-a-partial-type"></a>Non è possibile applicare il commento XML più di una volta in un elemento  parziale\<type>
+Non è possibile applicare il commento XML più di una volta in un oggetto parziale \<type> . I commenti XML per questo \<type> verranno ignorati.  
   
  Un blocco di commento XML può essere visualizzato solo sopra una parte di un tipo parziale.  
   
@@ -29,5 +29,5 @@ Il commento XML non può essere applicato più volte in un elemento parziale \<t
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Procedura: Creare documentazione XML](../../visual-basic/programming-guide/program-structure/how-to-create-xml-documentation.md)
-- [Tag di commento XML](../../visual-basic/language-reference/xmldoc/index.md)
+- [Procedura: Creare documentazione XML](../programming-guide/program-structure/how-to-create-xml-documentation.md)
+- [Tag di commento XML](../language-reference/xmldoc/index.md)
