--- a/docs/visual-basic/misc/bc42321.md
+++ b/docs/visual-basic/misc/bc42321.md
@@ -1,5 +1,5 @@
 ---
-title: Il formato XML non è valido. File '<commentfile>' non è possibile includere
+title: Il formato XML non è valido. Il file "<commentfile>" non può essere incluso
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42321
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC42321
 ms.assetid: 96611980-2323-466c-82c3-8bb678290b68
-ms.openlocfilehash: 52d7fb2c90adda00ea36a97606e4349716c50f25
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 43979c005a67c65b0e08b36ed36ba3f732a8e2c8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61767627"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84400900"
 ---
-# <a name="badly-formed-xml-file-commentfile-cannot-be-included"></a>Il formato XML non è valido. File '\<filecommento >' non è possibile includere
+# <a name="badly-formed-xml-file-commentfile-cannot-be-included"></a>Il formato XML non è valido. Il file "\<commentfile>" non può essere incluso
 Un tag `<include>` in uno dei commenti XML fa riferimento a un file che non esiste o a un file che contiene un formato XML non valido.  
   
  **ID errore:** BC42321  
@@ -27,4 +27,4 @@ Un tag `<include>` in uno dei commenti XML fa riferimento a un file che non esis
   
 ## <a name="see-also"></a>Vedere anche
 
-- [\<include>](../../visual-basic/language-reference/xmldoc/include.md)
+- [\<include>](../language-reference/xmldoc/include.md)
