--- a/docs/visual-basic/misc/bc30066.md
+++ b/docs/visual-basic/misc/bc30066.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30066
 ms.assetid: 09e7e766-e35d-4282-b949-d227f733f950
-ms.openlocfilehash: fa0c8fc99721b5f27ab2b74a4be5833ff7714aa6
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: fc7f9cd9b1192c53cec9ef95752d9f42fead1427
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622235"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381323"
 ---
 # <a name="exit-property-is-not-valid-in-a-function-or-sub"></a>Exit Property' non è valido in Function o Sub
 `Exit Property` viene visualizzato in una routine `Function` o `Sub` . Un'istruzione `Exit` deve corrispondere al blocco in cui è inclusa.  
@@ -25,6 +25,6 @@ ms.locfileid: "64622235"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine Sub](../../visual-basic/programming-guide/language-features/procedures/sub-procedures.md)
-- [Routine Function](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)
-- [Routine Property](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [Routine Sub](../programming-guide/language-features/procedures/sub-procedures.md)
+- [Routine Function](../programming-guide/language-features/procedures/function-procedures.md)
+- [Routine Property](../programming-guide/language-features/procedures/property-procedures.md)
