--- a/docs/visual-basic/misc/bc30270.md
+++ b/docs/visual-basic/misc/bc30270.md
@@ -1,5 +1,5 @@
 ---
-title: "'<specifier>' non è valido in una dichiarazione di metodo di interfaccia"
+title: "' <specifier> ' non è valido in una dichiarazione di metodo di interfaccia"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30270
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30270
 ms.assetid: 598f2944-3e5d-4686-b6f7-2b4bcaf5c211
-ms.openlocfilehash: 23a9e1f32669c8ed7a5f6063ad557a2b0716c693
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 5ef6af69d960b908d2ac126c83cdd8479fbd8852
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62027758"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390936"
 ---
-# <a name="specifier-is-not-valid-on-an-interface-method-declaration"></a>'\<identificatore >' non è valido in una dichiarazione di metodo di interfaccia
+# <a name="specifier-is-not-valid-on-an-interface-method-declaration"></a>' \<specifier> ' non è valido in una dichiarazione di metodo di interfaccia
 Un'istruzione `Function` o `Sub` all'interno di un'interfaccia contiene una parola chiave non valida, ad esempio `Implements`. Un'interfaccia può solo definire i membri, non implementarli.  
   
  **ID errore:** BC30270  
@@ -27,5 +27,5 @@ Un'istruzione `Function` o `Sub` all'interno di un'interfaccia contiene una paro
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Interface](../../visual-basic/language-reference/statements/interface-statement.md)
-- [Istruzione Implements](../../visual-basic/language-reference/statements/implements-statement.md)
+- [Istruzione Interface](../language-reference/statements/interface-statement.md)
+- [Istruzione Implements](../language-reference/statements/implements-statement.md)
