--- a/docs/visual-basic/misc/bc30392.md
+++ b/docs/visual-basic/misc/bc30392.md
@@ -1,5 +1,5 @@
 ---
-title: "'Catch' non può intercettare il tipo '<typename>' perché non è una classe che eredita da 'System. Exception' o 'System. Exception'"
+title: "'Catch' non può intercettare il tipo '<typename>' perché non è 'System.Exception' o una classe che eredita da 'System.Exception'"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30392
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30392
 ms.assetid: 1d513d1d-38f5-4b4e-95bb-9f1209553803
-ms.openlocfilehash: caf1b24e50d01efd017b40cf615eb1e541a44c9b
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 778591653948b64b1f6336bad6f48d520b22e51c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61931415"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84397129"
 ---
-# <a name="catch-cannot-catch-type-typename-because-it-is-not-systemexception-or-a-class-that-inherits-from-systemexception"></a>'Catch' non può intercettare il tipo '\<nomeTipo >' perché non è una classe che eredita da 'System. Exception' o 'System. Exception'
+# <a name="catch-cannot-catch-type-typename-because-it-is-not-systemexception-or-a-class-that-inherits-from-systemexception"></a>'Catch' non può intercettare il tipo '\<typename>' perché non è 'System.Exception' o una classe che eredita da 'System.Exception'
 `Catch` può solo intercettare le eccezioni e si è tentato di intercettare un elemento che non è derivato da un'eccezione.  
   
  **ID errore:** BC30392  
@@ -25,4 +25,4 @@ ms.locfileid: "61931415"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Try...Catch...Finally](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)
+- [Istruzione Try...Catch...Finally](../language-reference/statements/try-catch-finally-statement.md)
