--- a/docs/visual-basic/misc/bc30618.md
+++ b/docs/visual-basic/misc/bc30618.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30618
 ms.assetid: bcd365a4-5d84-4c3c-83dc-40cb4c47f73b
-ms.openlocfilehash: 12b73b4c0fc5a5a0675c4a3ea368b1f853593802
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 73a621f587e1bbe677566999806d920540683a23
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646776"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84401251"
 ---
 # <a name="namespace-statements-can-occur-only-at-file-or-namespace-level"></a>Le istruzioni 'Namespace' possono trovarsi solo a livello di file o di spazio dei nomi
 Le istruzioni`Namespace` devono essere visualizzate dopo le istruzioni `Option` , le istruzioni `Imports` , le istruzioni and global attributes, but before all other declarations in your source file.  
@@ -25,5 +25,5 @@ Le istruzioni`Namespace` devono essere visualizzate dopo le istruzioni `Option` 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Namespace](../../visual-basic/language-reference/statements/namespace-statement.md)
-- [Spazi dei nomi in Visual Basic](../../visual-basic/programming-guide/program-structure/namespaces.md)
+- [Istruzione Namespace](../language-reference/statements/namespace-statement.md)
+- [Spazi dei nomi in Visual Basic](../programming-guide/program-structure/namespaces.md)
