--- a/docs/visual-basic/misc/bc30628.md
+++ b/docs/visual-basic/misc/bc30628.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30628
 ms.assetid: 131ecce1-6378-43fb-af0b-cdf5a0350cec
-ms.openlocfilehash: 9af4e37f8e03cde3cac3daa400eb823d43148095
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 74f7be4a1ac3aa24ceb1124ca2228e3106c1c060
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646658"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415258"
 ---
 # <a name="structures-cannot-have-inherits-statements"></a>Le strutture non possono contenere istruzioni 'Inherits'
 A differenza delle classi, le strutture non supportano l'ereditarietà.  
@@ -27,5 +27,5 @@ A differenza delle classi, le strutture non supportano l'ereditarietà.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Strutture](../../visual-basic/programming-guide/language-features/data-types/structures.md)
-- [Strutture e classi](../../visual-basic/programming-guide/language-features/data-types/structures-and-classes.md)
+- [Strutture](../programming-guide/language-features/data-types/structures.md)
+- [Strutture e classi](../programming-guide/language-features/data-types/structures-and-classes.md)
