--- a/docs/visual-basic/misc/bc30643.md
+++ b/docs/visual-basic/misc/bc30643.md
@@ -1,5 +1,5 @@
 ---
-title: Proprietà '<propertyname>' è di tipo non supportato
+title: La proprietà '<propertyname>' è di tipo non supportato
 ms.date: 07/20/2015
 f1_keywords:
 - bc30643
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30643
 ms.assetid: 1b1b3d99-7436-4956-9266-06a5484336ab
-ms.openlocfilehash: bb15ce9c12872004b96b4c1b775d7e9454630782
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 2f1460b501e32d3e43868650b63ba14bcd06bea7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646523"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415089"
 ---
-# <a name="property-propertyname-is-of-an-unsupported-type"></a>Proprietà '\<NomeProprietà >' è di tipo non supportato
+# <a name="property-propertyname-is-of-an-unsupported-type"></a>La proprietà '\<propertyname>' è di tipo non supportato
 Una proprietà in un assembly di riferimento contiene un tipo che non può essere rappresentato.  
   
  **ID errore:** BC30643  
@@ -25,4 +25,4 @@ Una proprietà in un assembly di riferimento contiene un tipo che non può esser
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tipi di dati](../../visual-basic/programming-guide/language-features/data-types/index.md)
+- [Tipi di dati](../programming-guide/language-features/data-types/index.md)
