--- a/docs/visual-basic/misc/bc32016.md
+++ b/docs/visual-basic/misc/bc32016.md
@@ -1,5 +1,5 @@
 ---
-title: "'<procedurename>' non ha parametri e il tipo restituito non può essere indicizzato"
+title: "' <procedurename> ' non ha parametri e il tipo restituito non può essere indicizzato"
 ms.date: 07/20/2015
 f1_keywords:
 - bc32016
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32016
 ms.assetid: beead513-c237-4c04-8a18-56f075b84712
-ms.openlocfilehash: dba85c45b3c5f37b68f492e6cf4f250eca8fd2aa
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 5cc2a1c5e7832ce037ae9a61b0c7e838374edf5c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64604933"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413895"
 ---
-# <a name="procedurename-has-no-parameters-and-its-return-type-cannot-be-indexed"></a>'\<nomeroutine >' non ha parametri e il tipo restituito non può essere indicizzato
+# <a name="procedurename-has-no-parameters-and-its-return-type-cannot-be-indexed"></a>' \<procedurename> ' non ha parametri e il tipo restituito non può essere indicizzato
 Una chiamata a una routine `Function` o `Sub` fornisce uno o più argomenti, ma la routine non accetta alcun argomento e il relativo tipo restituito (se è un `Function`) non è un tipo di matrice.  
   
  **ID errore:** BC32016  
@@ -25,7 +25,7 @@ Una chiamata a una routine `Function` o `Sub` fornisce uno o più argomenti, ma 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine Sub](../../visual-basic/programming-guide/language-features/procedures/sub-procedures.md)
-- [Routine Function](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)
-- [Istruzione Function](../../visual-basic/language-reference/statements/function-statement.md)
-- [Istruzione Sub](../../visual-basic/language-reference/statements/sub-statement.md)
+- [Routine Sub](../programming-guide/language-features/procedures/sub-procedures.md)
+- [Routine Function](../programming-guide/language-features/procedures/function-procedures.md)
+- [Istruzione Function](../language-reference/statements/function-statement.md)
+- [Istruzione Sub](../language-reference/statements/sub-statement.md)
