--- a/docs/visual-basic/misc/bc32200.md
+++ b/docs/visual-basic/misc/bc32200.md
@@ -1,5 +1,5 @@
 ---
-title: "'<membername>' non può essere dichiarato 'Shadows' all'esterno di una classe, struttura o interfaccia"
+title: "' <membername> ' non può essere dichiarato come ' Shadows ' all'esterno di una classe, di una struttura o di un'interfaccia"
 ms.date: 07/20/2015
 f1_keywords:
 - bc32200
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32200
 ms.assetid: 23e28894-5854-46ef-924d-f1cb6e81bcb1
-ms.openlocfilehash: c1ec88498df819c46519341944ac8c53d529df24
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f6755504710301063801cb7654db3ec72695ccfe
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64626779"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84402447"
 ---
-# <a name="membername-cannot-be-declared-shadows-outside-of-a-class-structure-or-interface"></a>'\<nomeMembro >' non può essere dichiarato 'Shadows' all'esterno di una classe, struttura o interfaccia
+# <a name="membername-cannot-be-declared-shadows-outside-of-a-class-structure-or-interface"></a>' \<membername> ' non può essere dichiarato come ' Shadows ' all'esterno di una classe, di una struttura o di un'interfaccia
 La parola chiave `Shadows` è presente in una dichiarazione a livello di spazio dei nomi, modulo o file. Lo shadowing è significativo solo all'interno di un elemento di programmazione che può ereditare da un elemento di base.  
   
  **ID errore:** BC32200  
@@ -25,5 +25,5 @@ La parola chiave `Shadows` è presente in una dichiarazione a livello di spazio 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Shadows](../../visual-basic/language-reference/modifiers/shadows.md)
-- [Shadowing in Visual Basic](../../visual-basic/programming-guide/language-features/declared-elements/shadowing.md)
+- [Shadows](../language-reference/modifiers/shadows.md)
+- [Shadowing in Visual Basic](../programming-guide/language-features/declared-elements/shadowing.md)
