--- a/docs/visual-basic/misc/bc33014.md
+++ b/docs/visual-basic/misc/bc33014.md
@@ -1,5 +1,5 @@
 ---
-title: Operatore '<operator>' deve avere un parametro
+title: L'operatore '<operator>' deve avere un parametro
 ms.date: 07/20/2015
 f1_keywords:
 - bc33014
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC33014
 ms.assetid: 512a5724-a6c5-4437-a608-7d6b10e68d49
-ms.openlocfilehash: 5e245cbbac56ee749f9ecee11eb25c0c3e618558
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f0366504b0723227e11af13a0d0f80b5245c9eeb
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64626730"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84399254"
 ---
-# <a name="operator-operator-must-have-one-parameter"></a>Operatore '\<operatore >' deve avere un parametro
+# <a name="operator-operator-must-have-one-parameter"></a>L'operatore '\<operator>' deve avere un parametro
 Un operatore unario viene definito senza parametri o con più di un parametro.  
   
  Un operatore unario deve avere esattamente un parametro.  
@@ -27,11 +27,11 @@ Un operatore unario viene definito senza parametri o con più di un parametro.
   
 - Se sono necessari due parametri, è necessario definire un operatore binario.  
   
-- Se è necessario senza parametri o con più di due, è necessario usare il [istruzione Function](../../visual-basic/language-reference/statements/function-statement.md) per definire un `Function` routine invece di un operatore.  
+- Se non sono necessari parametri o più di due, è necessario usare l' [istruzione Function](../language-reference/statements/function-statement.md) per definire una `Function` routine anziché un operatore.  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine di operatore](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [Istruzione Operator](../../visual-basic/language-reference/statements/operator-statement.md)
-- [Procedura: Definire un operatore](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [Procedura: Definire un operatore di conversione](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [Routine di operatore](../programming-guide/language-features/procedures/operator-procedures.md)
+- [Operator Statement](../language-reference/statements/operator-statement.md)
+- [Procedura: definire un operatore](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [Procedura: Definire un operatore di conversione](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
