--- a/docs/visual-basic/misc/bc42030.md
+++ b/docs/visual-basic/misc/bc42030.md
@@ -1,5 +1,5 @@
 ---
-title: Variabile '<variablename>' viene passato per riferimento prima che sia stato assegnato un valore
+title: La variabile '<variablename>' è stata passata per riferimento prima dell'assegnazione di un valore
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42030
@@ -7,19 +7,19 @@ f1_keywords:
 helpviewer_keywords:
 - BC42030
 ms.assetid: 8f1aae99-f032-4fdf-b6dc-3360cc5b94de
-ms.openlocfilehash: 53ab4765da275508f8a2cf1d93786522242672a7
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 1769470d281720185769c42a8c08e4966a2281d8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64751283"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84395493"
 ---
-# <a name="variable-variablename-is-passed-by-reference-before-it-has-been-assigned-a-value"></a>Variabile '\<nomevariabile >' viene passato per riferimento prima che sia stato assegnato un valore
-Variabile '\<nomevariabile >' viene passato per riferimento prima che sia stato assegnato un valore. È possibile che in fase di esecuzione venga restituita un'eccezione dovuta a un riferimento Null.  
+# <a name="variable-variablename-is-passed-by-reference-before-it-has-been-assigned-a-value"></a>La variabile '\<variablename>' è stata passata per riferimento prima dell'assegnazione di un valore
+La variabile ' \<variablename> ' viene passata per riferimento prima dell'assegnazione di un valore. È possibile che in fase di esecuzione venga restituita un'eccezione dovuta a un riferimento Null.  
   
  Una chiamata di routine passa una variabile come argomento a un parametro `ByRef` prima dell'assegnazione di qualsiasi valore alla variabile.  
   
- Se a una variabile non è mai stato assegnato alcun valore, questa manterrà il valore predefinito per il tipo di dati. Per un tipo di dati di riferimento, il valore predefinito è [Nothing](../../visual-basic/language-reference/nothing.md). La lettura di una variabile di riferimento con un valore `Nothing` può causare un'eccezione <xref:System.NullReferenceException> in alcune circostanze.  
+ Se a una variabile non è mai stato assegnato alcun valore, questa manterrà il valore predefinito per il tipo di dati. Per un tipo di dati di riferimento, il valore predefinito è [Nothing](../language-reference/nothing.md). La lettura di una variabile di riferimento con un valore `Nothing` può causare un'eccezione <xref:System.NullReferenceException> in alcune circostanze.  
   
  Il passaggio di un argomento a una routine `ByRef` espone la variabile sottostante all'argomento a possibili modifiche da parte della routine.  
   
@@ -33,13 +33,13 @@ Variabile '\<nomevariabile >' viene passato per riferimento prima che sia stato 
   
 - Se la logica presente nella routine legge l'argomento prima di assegnargli un valore e se la variabile è un tipo valore, accertarsi che la logica della routine non dipenda dalla presenza di un valore predefinito nella variabile.  
   
-- Se la logica della routine legge l'argomento prima di assegnargli un valore e se la variabile è un tipo riferimento, accertarsi che la logica della routine sia in grado di gestire un valore di `Nothing`. Ad esempio, è possibile usare un [Try... Catch... Istruzione finally](../../visual-basic/language-reference/statements/try-catch-finally-statement.md) per intercettare un <xref:System.NullReferenceException>.  
+- Se la logica della routine legge l'argomento prima di assegnargli un valore e se la variabile è un tipo riferimento, accertarsi che la logica della routine sia in grado di gestire un valore di `Nothing`. Ad esempio, potrebbe usare un [try... Rileva... Istruzione finally](../language-reference/statements/try-catch-finally-statement.md) per intercettare un oggetto <xref:System.NullReferenceException> .  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Dim](../../visual-basic/language-reference/statements/dim-statement.md)
-- [Value Types and Reference Types](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
-- [Passaggio di argomenti per valore e per riferimento](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-value-and-by-reference.md)
-- [ByRef](../../visual-basic/language-reference/modifiers/byref.md)
-- [Dichiarazione di variabile](../../visual-basic/programming-guide/language-features/variables/variable-declaration.md)
-- [Risoluzione dei problemi relativi alle variabili](../../visual-basic/programming-guide/language-features/variables/troubleshooting-variables.md)
+- [Istruzione Dim](../language-reference/statements/dim-statement.md)
+- [Value Types and Reference Types](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [Passaggio di argomenti per valore e per riferimento](../programming-guide/language-features/procedures/passing-arguments-by-value-and-by-reference.md)
+- [ByRef](../language-reference/modifiers/byref.md)
+- [Dichiarazione di variabile](../programming-guide/language-features/variables/variable-declaration.md)
+- [Risoluzione dei problemi relativi alle variabili](../programming-guide/language-features/variables/troubleshooting-variables.md)
