--- a/docs/visual-basic/misc/bc42312.md
+++ b/docs/visual-basic/misc/bc42312.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC42312
 ms.assetid: c65b702c-b634-4bfe-82b9-edcac464b494
-ms.openlocfilehash: 55b6f8b0479696af380c7aa11164e0d634380007
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f2bd3a9be488a20ffaffaf8c745ae8ad8361eb47
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663066"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84394921"
 ---
 # <a name="xml-comment-block-cannot-be-associated-with-any-language-element-that-supports-the-application-of-xml-documentation-comments"></a>Il blocco di commento XML non può essere associato a un elemento del linguaggio che supporta l'applicazione di commenti relativi alla documentazione XML
 Il blocco di commento XML non può essere associato ad alcun elemento di linguaggio valido. Il commento XML verrà ignorato. Questo errore si verifica anche se a un tag XML nel blocco di commento non corrisponde alcun elemento di linguaggio.  
@@ -25,5 +25,5 @@ Il blocco di commento XML non può essere associato ad alcun elemento di linguag
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Procedura: Creare documentazione XML](../../visual-basic/programming-guide/program-structure/how-to-create-xml-documentation.md)
-- [Tag di commento XML](../../visual-basic/language-reference/xmldoc/index.md)
+- [Procedura: Creare documentazione XML](../programming-guide/program-structure/how-to-create-xml-documentation.md)
+- [Tag di commento XML](../language-reference/xmldoc/index.md)
